welcome.lessons.welcome.array.basics.Array2.scala.error
Array2:4: error: not found: type readColumn
  var colors = new readColumn()
                   ^